cluster/gitops/development/renovate-operator/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: renovate-operator
specs:
  - description: operator
    endpointSelector:
      matchLabels:
        app: renovate-operator
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # kube-apiserver: CRD/Job/Secret management and leader election
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # OIDC back-channel via the openid-configuration-proxy
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: security
              app.kubernetes.io/name: openid-configuration-proxy
              app.kubernetes.io/instance: openid-configuration-proxy
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      # GitHub API: App installation token minting
      - toFQDNs:
          - matchName: api.github.com
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # Kubelet health checks
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
      # Web UI via the internal gateway
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
      # GitHub webhooks via the external gateway
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: external-gateway
        toPorts:
          - ports:
              - port: "8082"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
